# openSVK

./: .gitignore  CBR_SVK.pro  CMakeLists.txt  README.md  cbr-svk.service  config.xml  env  install  manage  telnet_login
.github/workflows/: cmake-single-platform.yml  codeql.yml
common/: linuxdir.cpp  linuxdir.h
config/: CMakeLists.txt  config.c  config.h  config_example.xml  configcxx.cpp  configcxx.h  main.c
contrib/commons/: cbr-svk.service  config.xsd  opensvk.service  telnet_login
contrib/config/msk/: config.xml
contrib/doc/: readme.rtf  Схема взаимодействия.odg
contrib/msk/: service.env
contrib/script/: config.xml  configure  install  install_new  manage
contrib/simple/: config.xml
svkcompose/: CMakeLists.txt  base64.cpp  base64.h  main.cpp  svkcompose.cpp  svkcompose.h
svkextract/: CMakeLists.txt  main.cpp  svkextract.cpp  svkextract.h
svkmain/: CMakeLists.txt  main.cpp  svkmain.cpp  svkmain.h
svkpop3get/: CMakeLists.txt  main.c
svkpop3list/: CMakeLists.txt  main.c
svkpop3smtp/: CMakeLists.txt
svksmtp/: CMakeLists.txt  main.c
svktelnet/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_svkpop3list.cpp
