cmake_minimum_required(VERSION 3.5)

project(svksmtp LANGUAGES C)
SET(CMAKE_BUILD_RPATH_USE_ORIGIN TRUE)

find_library(CURL_LIB curl)
link_libraries(curl)
if(NOT DEFINED WHOLE_PROJECT)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "./../../bin")
    link_libraries("${CMAKE_CURRENT_SOURCE_DIR}/../bin/libconfig.so")
else()
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
    link_libraries("${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/libconfig.so")
endif()
add_executable(svksmtp main.c)

find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(svksmtp PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(svksmtp "${CMAKE_THREAD_LIBS_INIT}")
endif()
